changed user and blog service ,added post functionality by user and  and delete and view