@@ -1,12 +1,11 @@
 package com.blogwebsite.blog.utils;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import com.blogwebsite.blog.domain.BlogEntity;
-import com.blogwebsite.blog.proxy.BlogProxy;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 @Component
@@ -15,25 +14,34 @@ public class Helper {
 	@Autowired
 	private ObjectMapper mapper;
 	
-	public BlogEntity convertBlogProxyToEntity(BlogProxy blogproxy)
-	{
-	return mapper.convertValue(blogproxy, BlogEntity.class);	
-	}
+//	public BlogEntity convertBlogProxyToEntity(BlogProxy blogproxy)
+//	{
+//	return mapper.convertValue(blogproxy, BlogEntity.class);	
+//	}
+//	
+//	public BlogProxy convertBlogEntityToProxy(BlogEntity blogEntity)
+//	{
+//	return mapper.convertValue(blogEntity, BlogProxy.class);	
+//	}
+//	
+//	public List<BlogEntity> convertBlogListProxyToEntity(List<BlogProxy> blogProxy)
+//	{
+//	return blogProxy.stream().map(a->mapper.convertValue(a, BlogEntity.class)).toList();	
+//	}
+//	
+//	public List<BlogProxy> convertBlogListEntityToProxy(List<BlogEntity> blogEntitylst)
+//	{
+//		return blogEntitylst.stream().map(a->mapper.convertValue(a, BlogProxy.class)).toList();
+//	}
 	
-	public BlogProxy convertBlogEntityToProxy(BlogEntity blogEntity)
+	public <S, T> T convert(S source, Class<T> targetClass) 
 	{
-	return mapper.convertValue(blogEntity, BlogProxy.class);	
+	        return mapper.convertValue(source, targetClass);
 	}
-	
-	public List<BlogEntity> convertBlogListProxyToEntity(List<BlogProxy> blogProxy)
+	   
+	public <S,T> List<T> convertList(List<S> sourceList,Class<T> tragetClass)
 	{
-	return blogProxy.stream().map(a->mapper.convertValue(a, BlogEntity.class)).toList();	
+		return sourceList.stream().map(source->convert(source,tragetClass)).collect(Collectors.toList());
 	}
-	
-	public List<BlogProxy> convertBlogListEntityToProxy(List<BlogEntity> blogEntitylst)
-	{
-		return blogEntitylst.stream().map(a->mapper.convertValue(a, BlogProxy.class)).toList();
-	}
-	
 	
 }
